style.css
/* general? */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    display: flex;
    flex-flow: column;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

/* header top part */

header {
    display: flex;
    height: auto;
    flex-flow: column;
    background-color: pink;
    padding: 8px 8px 0px 8px;
}

header a {
    color: black;
}

.header-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-top ul {
    display: flex;
    gap: 16px;
}


/* hero section */

.header-hero {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    padding: 100px;
    gap: 40px;
}

.header-hero h2 {
    font-size: 38px;
}

.header-hero div {
    width: 350px;
}

.header-hero img {
    width: 350px;
    height: 100%;
    border-radius: 10px;
    border: 5px black solid;
}

.header-hero .btn {
    padding: 10px;
    border-radius: 10px;
    margin-top: 10px;
}

.header-hero .btn:hover {
    background-color: blue;
    color: white;
    cursor: pointer;
}

/* info */

.info {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    margin: 2rem;
    gap: 28px;
}

.info h2 {
    font-size: 28px;
}

/* info: gallery */

.info ul {
    display: flex;
    gap: 18px;

}

.info li {
    display: flex;
    flex-flow: column;
    width: 200px;
    align-items: center;

}

.info .box {
    width: 150px;
    height: 150px;
    border: solid black 3px;
    border-radius: 10px;
}

.info .box img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
}

.info p {
    margin-top: 5px;
    text-align: center;
    width: 100%;
}

/* testimonial */

.testimonial {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    background-color: pink;
}

.testimonial .container {
    margin: 100px;
    display: flex;
    flex-flow: column;
}

.testimonial #quote {
    align-self: flex-start;
    width: 500px;
    font-size: 36px;
}

.testimonial #quote-from {
    font-size: 22px;
    align-self: flex-end;
    font-weight: bold;
}

/* buy moths now */

.buy-now {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
}

.buy-now .container {
    margin: 50px;
    padding: 25px 100px;
    background-color: lavender;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.buy-now .description {
    width: 50%;
}

.buy-now .btn {
    align-self: center;
    padding: 5px 20px;
    border-radius: 5px;
    background-color: pink;
}

.buy-now .btn:hover {
    background-color: blue;
    color: white;
    cursor: pointer;
}


/* footer */

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px;
    background-color: rgb(54, 68, 48);
    color: white;
}

